--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.12.22",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
@@ -23,5 +24,8 @@
     "sharp": "^0.32.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "daisyui": "^3.2.1"
   }
 }
